--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device, initial-scale=1">
      <!-- Bootstrap CSS -->
      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous"/> 
+     <!--Additional CSS must be placed AFTER Bootstrap CSS-->
+     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans"/>
+     <link rel="stylesheet" href="/css/styles.css">
     <title>Nucamp: A Better Way To Camp</title>
 </head>
 
@@ -19,43 +22,61 @@
                     <h2>a better way to camp</h2>
                 </div>
             </div>
-            
         </div>
     </header>
+
+    <!--Navbar-->
+    <nav class="navbar navbar-expand-sm navbar-dark sticky-top">
+        <div class="container">
+            <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#nucampNavbar">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <ul class="navbar-nav">
+                <li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="aboutus.html">About</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">Sites</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+            </ul>
+            <div class="collapse navbar-collapse" id="nucampNavbar">
+                <ul class="navbar-nav">
+                </ul>
+            </div>
+        </div>
+    </nav>
 
     <!--main section-->
     <main class="container">
 
         <!--discover section-->
-        <section class="row">
+        <section class="row row-content align-items-center">
             <div class="col-sm-4 col-md-3 order-sm-last">
-                <h2>Discover & Review</h2>
+                <h2 class="text-sm-end">Discover & Review</h2>
             </div>
             <div class="col">
                 <h3>Our Campsites</h3>
-                <p>Explore our growing database of curated campsites and leave your own reviews!</p>
+                <p class="d-none d-sm-block">Explore our growing database of curated campsites and leave your own reviews!</p>
             </div>
         </section>
 
         <!--Feature Section-->
-        <section class="row">
+        <section class="row row-content align-items-center">
             <div class="col-sm-4 col-md-3">
                <h2>Featured Campsites</h2>
             </div> 
             <div class="col">
                 <h3>React Lake Campground</h3>
-                <p>Nestles in the foothills of the Chrome Mountians, this campground on the shores of the pristine React Lake is a favorite for fly fishing.</p>
+                <p class="d-none d-sm-block">Nestles in the foothills of the Chrome Mountians, this campground on the shores of the pristine React Lake is a favorite for fly fishing.</p>
             </div>
         </section>
 
         <!--Partner Section-->
-        <section class="row">
+        <section class="row row-content align-items-center">
             <div class="col-sm-4 col-md-3 order-sm-last">
-                <h2>Our Community Partners</h2>
+                <h2 class="text-sm-end">Our Community Partners</h2>
             </div>
             <div class="col">
                 <h3>Bootstrap Outfitters</h3>
-                <p>Bootstrap Outfitters supplies you with gear you need at prices you can't beat.</p>
+                <p class="d-none d-sm-block">Bootstrap Outfitters supplies you with gear you need at prices you can't beat.</p>
             </div>
         </section>
     </main>
@@ -63,23 +84,23 @@
     <footer>
         <div class="container">
             <div class="row">
-                    <div class="col-4 col-sm-2 offset-1">
+                    <div class="col-4 col-sm-2 offset-1 text-center">
                         <h5>Links</h5>
                         <uL class="list-unstyled">
                             <li><a href="#">Home</a></li>
-                            <li><a href="#">About</a></li>
+                            <li><a href="aboutus.html">About</a></li>
                             <li><a href="#">Sites</a></li]>
                             <li><a href="#">Contact</a></li>
                         </uL>
                     </div>
-                    <div class="col-6 col-sm-5">
+                    <div class="col-6 col-sm-5 text-center">
                         <h5>Social</h5>
                         <a href="http://instagram.com/">Instagram</a>
                         <a href="http://facebook.com/">Facebook</a>
                         <a href="http://twitter.com/">Twitter</a>
                         <a href="http://youtube.com/">YouTube</a>
                     </div>
-                    <div class="col-sm-4">
+                    <div class="col-sm-4 text-center">
                         Tel: 1-206-555-1234<br>
                         Email: campsites#nucamp.com
                     </div>
