--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device, initial-scale=1">
+    
      <!-- Bootstrap CSS -->
-     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous"/> 
+     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" 
+     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous"/> 
+    
      <!--Additional CSS must be placed AFTER Bootstrap CSS-->
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" 
+     integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
      <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans"/>
      <link rel="stylesheet" href="/css/styles.css">
     <title>Nucamp: A Better Way To Camp</title>
@@ -34,10 +39,10 @@
             </button>
             <div class="collapse navbar-collapse" id="nucampNavbar">
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="aboutus.html">About</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Sites</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="#"><i class="fa-solid fa-house fa-lg"></i> Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="aboutus.html"><i class="fa-solid fa-info fa-lg"></i> About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#"><i class="fa-solid fa-list fa-lg"></i> Sites</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#"><i class="fa-solid fa-address-card fa-lg"></i> Contact</a></li>
             </div>
         </div>
     </nav>
@@ -78,6 +83,7 @@
             </div>
         </section>
     </main>
+
     <!--Footer-->
     <footer>
         <div class="container">
@@ -93,14 +99,14 @@
                     </div>
                     <div class="col-6 col-sm-5 text-center">
                         <h5>Social</h5>
-                        <a href="http://instagram.com/">Instagram</a>
-                        <a href="http://facebook.com/">Facebook</a>
-                        <a href="http://twitter.com/">Twitter</a>
-                        <a href="http://youtube.com/">YouTube</a>
+                        <a href="http://instagram.com/"><i class="fa-brands fa-instagram fa-xl"></i></a>
+                        <a href="http://facebook.com/"><i class="fa-brands fa-facebook fa-xl"></i></a>
+                        <a href="http://twitter.com/"><i class="fa-brands fa-twitter fa-xl"></i></a>
+                        <a href="http://youtube.com/"><i class="fa-brands fa-youtube fa-xl"></i></a>
                     </div>
                     <div class="col-sm-4 text-center">
-                        Tel: 1-206-555-1234<br>
-                        Email: campsites#nucamp.com
+                        <i class="fa-solid fa-phone fa-lg text-primary"></i> Tel: 1-206-555-1234<br>
+                        <i class="fa-solid fa-envelope fa-lg text-primary"></i> Email: campsites#nucamp.com
                     </div>
             </div>
         </div>
