--- a/aboutus.html
+++ b/aboutus.html
@@ -51,22 +51,53 @@
                     <li class="breadcrumb-item active">About</li>
                 </ol>
                <h2>About Us</h2>
-               <hr />
+               <hr/>
             </div>
         </div>
 
-        <section class="row row-content align-items-center">
-            <div class="col-sm">
+        <section class="row row-content">
+            <div class="col-sm-6">
                 <h3>Our Mission</h3>
                 <p>We present a curated database of the best campsites in the vast woods and backcountry of the World Wide Web Wilderness. We increase access
                 to adventure for the public while promoting safe and respectful use of resources. The expert wilderness trekkers on our staff personally verify each
                 campsite to make sure that they are up to our standards. We also present a platform for campers to share reviews on campsites they have visited
                 with each other.</p>
             </div>
+            <div class="col-sm-6">
+                <div class="card">
+                    <h3 class="card-header bg-primary text-white">Facts at a Glance</h3>
+                    <div class="card-body">
+                        <dl class="row">
+                            <dt class="col-6">Founder</dt>
+                            <dd class="col-6">February 3, 2016</dd>
+                            <dt class="col-6">No. of Campsites in 2022</dt>
+                            <dd class="col-6">563</dd>
+                            <dt class="col-6">No. of Reviews in 2022</dt>
+                            <dd class="col-6">4388</dd>
+                            <dt class="col-6">Employess</dt>
+                            <dd class="col-6">42</dd>
+                        </dl>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card bg-light mt-3">
+                    <figure class="card-body">
+                        <blockquote class="blockquote">
+                            <q>I will not follow where the path may lead, 
+                            but I will go where there is no path, and I will leave a trail.</q>
+                        </blockquote>
+                        <figcaption class="blockquote-footer">
+                            Muriel Strode <cite>"Wind-Wafted Wild Flowers" - 
+                            The Open Court, Vol. 1903</cite>
+                        </figcaption>
+                    </figure>
+                </div>
+            </div>
         </section>
 
-        <section class="row row-content align-items-center">
-            <div class="col-sm">
+        <section class="row row-content">
+            <div class="col-12">
                 <h3>Community Partners</h3>
                 <h4>Bootstrap Outfitters <small>Outdoor Gear Specialists</small></h4>
                 <p class="d-none d-sm-block">Bootstrap Outfitters supplies you with the gear you need at prices you can't beat.</p>
@@ -78,6 +109,45 @@
                 <p class="d-none d-sm-block">From polar fleeces to swimsuits, hiking boots to waders, a visit to Node will be sure to get you covered.</p>
             </div>
         </section>
+
+        <!--Table-->
+        <sectoin class="row row-content">
+            <div class="col-sm-9">
+                <h2>Facts & Figures</h2>
+                <div class="table-responsive">
+                    <table class="table table-striped">
+                        <thead class="bg-primary text-light" >
+                            <tr>
+                                <th></th>
+                                <th>2020</th>
+                                <th>2021</th>
+                                <th>2022</th>
+                            </tr>
+                        </thead>
+                        <tbody class="table-primary">
+                            <tr>
+                                <th>Staff Wilderness Experts</th>
+                                <td>10</td>
+                                <td>20</td>
+                                <td>40</td>
+                            </tr>
+                            <tr>
+                                <th>New Campers</th>
+                                <td>256</td>
+                                <td>1,280</td>
+                                <td>5,360</td>
+                            </tr>
+                            <tr>
+                                <th>Square Miles Covered</th>
+                                <td>101,325</td>
+                                <td>423,000</td>
+                                <td>~3,000,000,000</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </sectoin>
     </main>
 
     <footer>
@@ -103,7 +173,7 @@
                     <i class="fa-solid fa-phone fa-lg text-primary"></i> Tel: 1-206-555-1234<br>
                     <i class="fa-solid fa-envelope fa-lg text-primary"></i> Email: campsites#nucamp.com
                 </div>
-           </div>
+        </div>
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
