--- a/aboutus.html
+++ b/aboutus.html
@@ -19,6 +19,9 @@
     <header>
         <div class="container">
             <div class="row">
+                <div class="col-4 col-sm-3 col-md-2 align-self-center">
+                    <img src="img/logo.png" class="image-fluid">
+                </div>
                 <div class="col">
                     <h1>Nucamp</h1>
                     <h2>a better way to camp</h2>
@@ -29,6 +32,7 @@
 
     <nav class="navbar navbar-expand-sm navbar-dark sticky-top">
         <div class="container">
+            <a class="navbar-brand" href="index.html"><img src="img/logo.png" height="30" width="30"></a>
             <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" 
             data-bs-target="#nucampNavbar">
                 <span class="navbar-toggler-icon"></span>
