--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
     <header>
         <div class="container">
             <div class="row">
+                <div class="col-4 col-sm-3 col-md-2 align-self-center">
+                    <img src="img/logo.png" class="image-fluid">
+                </div>
                 <div class="col">
                     <h1>Nucamp</h1>
                     <h2>a better way to camp</h2>
@@ -33,7 +36,8 @@
     <!--Navbar--> 
     <nav class="navbar navbar-expand-sm navbar-dark sticky-top">
         <div class="container">
-            <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" 
+            <a class="navbar-brand" href="#"><img src="img/logo.png" height="30" width="30"></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" 
             data-bs-target="#nucampNavbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -56,15 +60,20 @@
                 <h2 class="text-sm-end">Discover & Review</h2>
             </div>
             <div class="col">
-                <h3>Our Campsites</h3>
-                <p class="d-none d-sm-block">Explore our growing database of curated campsites and leave your own reviews!</p>
+                <div class="d-flex">
+                    <img class="me-3 img-thumbnail" src="img/breadcrumb-trail-thumb.jpg" alt="breadcrumb trail">
+                    <div class="align-self-center">
+                        <h3>Our Campsites</h3>
+                        <p class="d-none d-sm-block">Explore our growing database of curated campsites and leave your own reviews!</p>
+                    </div>
+                </div>
             </div>
         </section>
 
         <!--Feature Section-->
         <section class="row row-content align-items-center">
             <div class="col-sm-4 col-md-3">
-               <h2>Featured Campsites</h2>
+                <h2>Featured Campsites</h2>
             </div> 
             <div class="col">
                 <h3>React Lake Campground</h3>
@@ -78,8 +87,13 @@
                 <h2 class="text-sm-end">Our Community Partners</h2>
             </div>
             <div class="col">
-                <h3>Bootstrap Outfitters</h3>
-                <p class="d-none d-sm-block">Bootstrap Outfitters supplies you with gear you need at prices you can't beat.</p>
+                <div class="d-flex">
+                    <img class="me-3 img-thumbnail" src="img/bootstrap-thumb.png" alt="Bootstrap Outfitters">
+                    <div class="align-self-center">
+                        <h3>Bootstrap Outfitters</h3>
+                        <p class="d-none d-sm-block">Bootstrap Outfitter supplies ypu with gear you need at prices you can't beat.</p>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
