--- a/aboutus.html
+++ b/aboutus.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-
+    <!--Header-->
     <header>
         <div class="container">
             <div class="row">
@@ -30,10 +30,11 @@
         </div>
     </header>
 
+    <!--Navbar-->
     <nav class="navbar navbar-expand-sm navbar-dark sticky-top">
         <div class="container">
             <a class="navbar-brand" href="index.html"><img src="img/logo.png" height="30" width="30"></a>
-            <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" 
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" 
             data-bs-target="#nucampNavbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -42,11 +43,12 @@
                     <li class="nav-item"><a class="nav-link" href="index.html"><i class="fa-solid fa-house fa-lg"></i> Home</a></li>
                     <li class="nav-item"><a class="nav-link active" href="#"><i class="fa-solid fa-info fa-lg"></i> About</a></li>
                     <li class="nav-item"><a class="nav-link" href="#"><i class="fa-solid fa-list fa-lg"></i> Sites</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#"><i class="fa-solid fa-address-card fa-lg"></i> Contact</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contactus.html"><i class="fa-solid fa-address-card fa-lg"></i> Contact</a></li>
             </div>
         </div>
     </nav>
 
+    <!--Main Content-->
     <main class="container">
         <div class="row">
             <div class="col">
@@ -175,7 +177,7 @@
                 </div>
                 <div class="col-sm-4 text-center">
                     <i class="fa-solid fa-phone fa-lg text-primary"></i> Tel: 1-206-555-1234<br>
-                    <i class="fa-solid fa-envelope fa-lg text-primary"></i> Email: campsites#nucamp.com
+                    <i class="fa-solid fa-envelope fa-lg text-primary"></i> Email: campsites@nucamp.co
                 </div>
         </div>
         </div>
