--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <li class="nav-item"><a class="nav-link active" href="#"><i class="fa-solid fa-house fa-lg"></i> Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="aboutus.html"><i class="fa-solid fa-info fa-lg"></i> About</a></li>
                     <li class="nav-item"><a class="nav-link" href="#"><i class="fa-solid fa-list fa-lg"></i> Sites</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#"><i class="fa-solid fa-address-card fa-lg"></i> Contact</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contactus.html"><i class="fa-solid fa-address-card fa-lg"></i> Contact</a></li>
             </div>
         </div>
     </nav>
@@ -120,7 +120,7 @@
                     </div>
                     <div class="col-sm-4 text-center">
                         <i class="fa-solid fa-phone fa-lg text-primary"></i> Tel: 1-206-555-1234<br>
-                        <i class="fa-solid fa-envelope fa-lg text-primary"></i> Email: campsites#nucamp.com
+                        <i class="fa-solid fa-envelope fa-lg text-primary"></i> Email: campsites@nucamp.co
                     </div>
             </div>
         </div>
@@ -129,5 +129,3 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
 </html>
-
- 
