--- a/aboutus.html
+++ b/aboutus.html
@@ -128,7 +128,7 @@
 
                     <div class="accordion-item">
                         <h4 class="accordion-header">
-                            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#git">Git Out Expeditions></button>
+                            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#git">Git Out Expeditions</button>
                         </h4>
                         <div id="git" class="accordion-collapse collapse show" data-bs-parent="accordionExample">
                             <div class="accordion-body d-none d-sm-block">
