--- a/aboutus.html
+++ b/aboutus.html
@@ -120,7 +120,7 @@
                         </h4>
                         <div id="bootstrap" class="accordion-collapse collapse show" data-bs-parent="accordionExample">
                             <div class="accordion-body d-none d-sm-block">
-                                <p>Bootstrap Outfitters supplies you with the gear you need at prices
+                                <p>Bootstrap Outfitters supplies you with the gearexit you need at prices
                                     you can't beat.</p>
                             </div>
                         </div>
