--- a/index.html
+++ b/index.html
@@ -179,14 +179,14 @@
                         <div class="carousel-item">
                             <img class="d-block w-100" src="img/react-lake.jpg" alt="React Lake Campground">
                             <div class="carousel-caption">
-                                <h3>Chrome Mountains</h3>
+                                <h3>React Lake Campground</h3>
                                 <p class="d-none d-sm-block">Nestled in the foothills of the Chrome Mountains, this campground on the shores of the pristine React Lake is a favorite for fly fishers.</p>
                             </div>
                         </div>
                         <div class="carousel-item">
                             <img class="d-block w-100" src="img/chrome-river.jpg" alt="Chrome River Campground">
                             <div class="carousel-caption">
-                                <h3>Chrome River</h3>
+                                <h3>Chrome River Campground</h3>
                                 <p class="d-none d-sm-block">Spend a few sunny days and starry nights beneath a canopy of old-growth firs at this enchanting spot by the Chrome River.</p>
                             </div>
                         </div>
