--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     <div class="modal fade" id="reserveModal">
         <div class="modal-dialog modal-lg">
             <div class="modal-content">
-                <div class="modal-header bg-info text-white">
+                <div class="modal-header">
                     <h1 class="modal-title"></h1>Reserve a Campsite</h1>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
